[package]
authors = ["{{authors}}"]
edition = "2021"
name = "{{project-name}}"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
microbit-v2 = "0.13.0"

[[bin]]
name = "{{project-name}}"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
