[package]
authors = ["stewart"]
edition = "2021"
name = "microbit-clock"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
microbit-v2 = "0.13.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = "0.4.0"

[[bin]]
name = "microbit-clock"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
